# lusee_sky_simulations

./: .gitignore  .gitmodules  MANIFEST.in  README.md  README.rst  TODO.txt  layout.csv  obsparam.yaml  requirements.txt  setup.cfg  setup.py  uvbeam.yaml
.github/: dependabot.yml
.github/workflows/: push.yml
docs/: INSTALLATION.rst
luseesky/: run_sim.py  simsetup.py
luseesky/sim_files/: layout.csv  obsparam.yaml  uvbeam.yaml
luseesky/skymodels/: make_pygdsm.py
luseesky/tests/: test_coordinates.py  test_parse_fits.py  test_to_uvbeam.py
luseesky/utils/: beam_dir_touvb.py  coordinates.py  gen_21cm.py  make_ULSA.py  parse_csv_beam.py  parse_fits.py  to_uvbeam.py
luseesky/utils/ULSA/: make_ULSA.py
luseesky/utils/csv_beams/: csv_to_uvbeam.py  parse_csv_beam.py
notebooks/: Untitled.ipynb  mock_lusee_night_analysis.ipynb  mock_lusee_night_analysis_comp-newest.ipynb  mock_lusee_night_analysis_comp.ipynb  mock_lusee_night_analysis_comp_notpol.ipynb  mock_lusee_night_analysis_work_in_progress.ipynb  visualize_beams.ipynb
sim_files/: obsparam.yaml  uvbeam.yaml
utils/: csv_to_txt.py  misc.py  to_uvbeam.py
