[metadata]
name = luseesky
version = 0.0.1
description = Tools for simulating sky observations with lusee-night
long_description = file: README.md
author = Christian Hellum Bye
author_email = chb@berkeley.edu
license = MIT
url = https://github.com/christianhbye/lusee_sky_simulations

[options]
packages=find:
install_requires =
    astropy
    astropy-healpix
    healpy
    h5py
    ipykernel
    jupyter
    lunarsky
    matplotlib
    numpy
    pyuvdata
    pyuvsim[sim]
    caput @ git+https://github.com/radiocosmology/caput.git
    ULSA @ git+https://github.com/Yanping-Cong/ULSA.git

[options.extras_require]
dev = 
    black
    flake8
    mypy
    pytest

