[metadata]
name = luseesky
version = 0.0.1
description = Tools for simulating sky observations with lusee-night
long_description = file: README.md
author = Christian Hellum Bye
author_email = chb@berkeley.edu
license = MIT
url = https://github.com/christianhbye/lusee_sky_simulations

[options]
packages=find:
include_package_data=True
install_requires =
    astropy
    astropy-healpix
    h5py
    healpy
    ipykernel
    jupyter
    lunarsky
    matplotlib
    numpy
    pygdsm
    pyradiosky
    pyuvdata
    pyuvsim[all]
    caput @ git+https://github.com/zuoshifan/caput.git@zuo/develop
    ULSA @ git+https://github.com/Yanping-Cong/ULSA.git

[options.extras_require]
dev = 
    black
    flake8
    mypy
    pytest

[options.package_data]
* = *.rst, luseesky/sim_files/*
